attendance improvement and crud
