# app/Http/Requests/Attendance/CheckOutRequest.php
@@ -1,0 +1,20 @@
+<?php
+
+namespace App\Http\Requests\Attendance;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class CheckOutRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function rules(): array
+    {
+        return [
+            'employee_id' => ['required', 'string', 'uuid', 'exists:employees,id'],
+        ];
+    }
+}
